# mpdscribble

./: .gitignore  AUTHORS  ChangeLog  INSTALL  INSTALL.rst  Makefile.am  Makefile.in  NEWS  README  README.rst  TODO  aclocal.m4  as.c  as.h  autogen.sh  configure  configure.ac  configure.in  conn.c  conn.h  escape.c  escape.h  file.c  file.h  lmc.c  lmc.h  mbid.c  mbid.h  md5.c  md5.h  meson.build  meson_options.txt  misc.c  misc.h  mpdscribble.1  mpdscribble.c  setup.sh  valgrind.suppressions
.github/workflows/: build-windows.yml  build.yml
contrib/: init.d.gentoo  mpdscribble_sv.po
doc/: Makefile.am  meson.build  mpdscribble.1  mpdscribble.conf
libmpdclient/: Makefile.am  Makefile.in  Makefile.orig  README  example.c  libmpdclient.c  libmpdclient.h  resolver.c
m4/: cflags.m4
src/: AsioGetIoService.hxx  AsioServiceFwd.hxx  CommandLine.cxx  CommandLine.hxx  Config.cxx  Config.hxx  ConfigFile.cxx  ConfigFile.hxx  Daemon.cxx  Daemon.hxx  Form.cxx  Form.hxx  HttpClient.cxx  HttpClient.hxx  IgnoreList.cxx  IgnoreList.hxx  IniFile.cxx  IniFile.hxx  Instance.cxx  Instance.hxx  Journal.cxx  Journal.hxx  Log.cxx  Log.hxx  Main.cxx  Makefile.am  MpdObserver.cxx  MpdObserver.hxx  MultiScrobbler.cxx  MultiScrobbler.hxx  Protocol.cxx  Protocol.hxx  ReadConfig.cxx  ReadConfig.hxx  Record.cxx  Record.hxx  Scrobbler.cxx  Scrobbler.hxx  ScrobblerConfig.hxx  SdDaemon.hxx  (+36 more)
src/event/: EpollBackend.hxx  Loop.cxx  Loop.hxx  SignalMonitor.cxx.orig  SocketEvent.cxx  SocketEvent.hxx  SocketEvent.hxx.orig  TimerWheel.cxx  TimerWheel.hxx  WinSelectBackend.cxx  meson.build
src/io/: FileDescriptor.cxx  FileDescriptor.hxx  FileReader.cxx  FileReader.hxx  Path.hxx  meson.build
src/io/uring/: Features.h
src/lib/curl/: Easy.hxx  Escape.cxx  Escape.hxx  Global.cxx  Global.hxx  Handler.hxx  Init.cxx  Init.hxx  Multi.hxx  Request.cxx  Request.hxx  meson.build
src/lib/fmt/: meson.build
src/lib/gcrypt/: meson.build
src/lib/wincrypt/: MD5.cxx  MD5.hxx  meson.build
src/libmpdclient/: TODO  example.c  libmpdclient.c  libmpdclient.h  resolver.c  song.c  song.h
src/net/: SocketDescriptor.hxx  meson.build
src/system/: Error.hxx  meson.build
src/system/linux/: openat2.h
src/time/: Stopwatch.hxx
src/util/: Compiler.h  Exception.hxx  HexFormat.hxx  IntrusiveList.hxx  OptionDef.hxx  OptionParser.cxx  RuntimeError.hxx  ScopeExit.hxx  SpanCast.hxx  meson.build
subprojects/: .gitignore  curl-8.0.1.wrap
systemd/: .gitignore
systemd/system/: meson.build  mpdscribble.service.in
systemd/user/: meson.build  mpdscribble.service.in
test/: .gitignore  RunHttpClient.cxx  meson.build  run_http_client.c
