dnl Process this file with autoconf to produce a configure script.
AC_INIT(mpdscribble.c)
AM_INIT_AUTOMAKE(mpdscribble, 0.2.11)
AC_PROG_CC
AC_PROG_RANLIB

PKG_CHECK_MODULES([libgobject],[gobject-2.0],,[AC_MSG_ERROR([libgobject-2.0 not found])])
AC_SUBST(libgobject_CFLAGS)
AC_SUBST(libgobject_LIBS)

PKG_CHECK_MODULES([libgthread],[gthread-2.0],,[AC_MSG_ERROR([libgthread-2.0 not found])])
AC_SUBST(libgthread_CFLAGS)
AC_SUBST(libgthread_LIBS)

PKG_CHECK_MODULES([libsoup],[libsoup-2.2],,[AC_MSG_ERROR([libsoup-2.2 not found])])
AC_SUBST(libsoup_CFLAGS)
AC_SUBST(libsoup_LIBS)

AC_OUTPUT(Makefile libmpdclient/Makefile)
